--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   
   <title>Max Stevens - Senior Frontend developer</title>
   
-  <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/themify-icons.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
 
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/animate/animate.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor/animate/animate.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor/owl-carousel/owl.carousel.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/nice-select/css/nice-select.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor/nice-select/css/nice-select.css">
 
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/fancybox/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/vendor/fancybox/css/jquery.fancybox.min.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/virtual.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/virtual.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/minibar.virtual.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/minibar.virtual.css">
 
-  <link rel="stylesheet" type="text/css" href="../assets/css/customize.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/customize.css">
 </head>
 <body class="theme-red">
   
@@ -39,44 +39,9 @@
     <span class="ti-arrow-up"></span>
   </div>
   
-  <!-- Setting button -->
-  <div class="config">
-    <div class="template-config">
-      <!-- Settings -->
-      <div class="d-block">
-        <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
-      </div>
-      <!-- Puschase -->
-      <div class="d-block">
-        <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
-      </div>
-      <!-- Help -->
-      <div class="d-block">
-        <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
-      </div>
-    </div>
-    <div class="set-menu">
-      <p>Select Color</p>
-      <div class="color-bar" data-toggle="selected">
-        <span class="color-item bg-theme-red selected" data-class="theme-red"></span>
-        <span class="color-item bg-theme-blue" data-class="theme-blue"></span>
-        <span class="color-item bg-theme-green" data-class="theme-green"></span>
-        <span class="color-item bg-theme-orange" data-class="theme-orange"></span>
-        <span class="color-item bg-theme-purple" data-class="theme-purple"></span>
-      </div>
-      <select class="custom-select d-block my-2" id="change-page">
-        <option value="">Choose Page</option>
-        <option value="index">Topbar</option>
-        <option value="blog-topbar">Blog (Topbar)</option>
-        <option value="index-2">Minibar</option>
-        <option value="blog-minibar">Blog (Minibar)</option>
-      </select>
-    </div>
-  </div>
-  
   <div class="topbar-nav fixed-top">
     <div class="brand">
-      <img src="../assets/favicon.ico" alt="" width="30" height="30">
+      <img src="./assets/favicon.ico" alt="" width="30" height="30">
     </div>
     <h3 class="ml-1">Gram</h3>
     <button class="btn-fab toggle-menu mr-3"><span class="ti-menu"></span></button>
@@ -132,11 +97,11 @@
   </div>
   
   <div class="vg-main-wrapper">
-    <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_2.jpg);">
+    <div class="vg-page page-home" id="home" style="background-image: url(./assets/img/bg_image_2.jpg);">
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Welcome</h1>
         <h2 class="fw-medium fg-theme">I'm Max Stevens</h2>
-        <p class="tagline">Frontend Web Developer</p>
+        <p class="tagline">Senior Frontend Developer</p>
       </div>
     </div>
     
@@ -147,7 +112,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-place wow zoomIn">
-              <img src="../assets/img/person.png" alt="Photo Profile">
+              <img src="./assets/img/person.png" alt="Photo Profile">
             </div>
           </div>
           <div class="col-md-6">
@@ -245,9 +210,9 @@
               <li>
                 <div class="title">Current</div>
                 <div class="details">
-                  <h5>Senior Fullstack Engineer</h5>
+                  <h5>Senior Frontend Engineer</h5>
                   <small class="fg-theme">Self-Employed</small>
-                  <p>Freelance as an independant fullstack web & blockchain developer with various start-up clients.</p>
+                  <p>Freelance as an independant frontend web & blockchain developer with various start-up clients.</p>
                 </div>
               </li>
               <li>
@@ -365,7 +330,7 @@
     
     <!-- Testimonials -->
     <div class="vg-page p-0" id="testimonial">
-      <div class="owl-carousel testi-carousel" style="background-image: url(../assets/img/photo-2.jpg);">
+      <div class="owl-carousel testi-carousel" style="background-image: url(./assets/img/photo-2.jpg);">
         <div class="item">
           <p>Always offers good ideas and is willing to collaborate in order to make the project successful. Able to meet and exceed or expectations.</p>
           <span class="iconic">
@@ -410,7 +375,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://www.tsi-holdings.com/freshers" target="_blank">
-                <img src="../assets/img/work/cover5.jpg" alt="">
+                <img src="./assets/img/work/cover5.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">TSI HOLDINGS Recruit 2020</h5>
                   <p>Recruitment Site</p>
@@ -421,7 +386,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="http://www.makeabeeline.com/" target="_blank">
-                <img src="../assets/img/work/cover4.jpg" alt="">
+                <img src="./assets/img/work/cover4.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Beeline</h5>
                   <p>Digital Home Lender</p>
@@ -432,7 +397,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://findmy.vitra.com/en-en/" target="_blank">
-                <img src="../assets/img/work/cover3.jpg" alt="">
+                <img src="./assets/img/work/cover3.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Vitra</h5>
                   <p>Office Chair Finder</p>
@@ -443,7 +408,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://buttersand.com/" target="_blank">
-                <img src="../assets/img/work/cover6.jpg" alt="">
+                <img src="./assets/img/work/cover6.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">PRESS BUTTER SAND</h5>
                   <p>Online Store</p>
@@ -454,7 +419,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://itemherald.com/" target="_blank">
-                <img src="../assets/img/work/cover2.jpg" alt="">
+                <img src="./assets/img/work/cover2.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Item Herald</h5>
                   <p>P2P Marketplace for Game Items</p>
@@ -465,7 +430,7 @@
           <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://propertyclub.nyc/" target="_blank">
-                <img src="../assets/img/work/cover1.jpg" alt="">
+                <img src="./assets/img/work/cover1.jpg" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">PropertyClub</h5>
                   <p>Blockchain Real Estate Marketplace</p>
@@ -476,7 +441,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://portal.veryableops.com/" target="_blank">
-                <img src="../assets/img/work/cover9.png" alt="">
+                <img src="./assets/img/work/cover9.png" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Veryable</h5>
                   <p>On-Demand Business Marketplace</p>
@@ -487,7 +452,7 @@
           <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://outlawsnft.io/" target="_blank">
-                <img src="../assets/img/work/cover8.png" alt="">
+                <img src="./assets/img/work/cover8.png" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Crypto Outlaws</h5>
                   <p>Crypto Casino</p>
@@ -498,7 +463,7 @@
           <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://www.ovo.space/" target="_blank">
-                <img src="../assets/img/work/cover7.png" alt="">
+                <img src="./assets/img/work/cover7.png" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">OVO Space</h5>
                   <p>NFT Marketplace</p>
@@ -509,7 +474,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://travamigos.com/" target="_blank">
-                <img src="../assets/img/work/cover10.png" alt="">
+                <img src="./assets/img/work/cover10.png" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Travamigos</h5>
                   <p>Travel Site</p>
@@ -520,7 +485,7 @@
           <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://aviapark.com/" target="_blank">
-                <img src="../assets/img/work/cover11.png" alt="">
+                <img src="./assets/img/work/cover11.png" alt="">
                 <div class="img-caption">
                   <h5 class="fg-theme">Aviapark</h5>
                   <p>Shopping Mall Parking</p>
@@ -627,29 +592,29 @@
   </div> <!-- End main wrapper -->
   
   
-  <script src="../assets/js/jquery-3.5.1.min.js"></script>
+  <script src="./assets/js/jquery-3.5.1.min.js"></script>
   
-  <script src="../assets/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
   
-  <script src="../assets/vendor/owl-carousel/owl.carousel.min.js"></script>
+  <script src="./assets/vendor/owl-carousel/owl.carousel.min.js"></script>
   
-  <script src="../assets/vendor/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+  <script src="./assets/vendor/perfect-scrollbar/js/perfect-scrollbar.js"></script>
   
-  <script src="../assets/vendor/isotope/isotope.pkgd.min.js"></script>
+  <script src="./assets/vendor/isotope/isotope.pkgd.min.js"></script>
   
-  <script src="../assets/vendor/nice-select/js/jquery.nice-select.min.js"></script>
+  <script src="./assets/vendor/nice-select/js/jquery.nice-select.min.js"></script>
   
-  <script src="../assets/vendor/fancybox/js/jquery.fancybox.min.js"></script>
+  <script src="./assets/vendor/fancybox/js/jquery.fancybox.min.js"></script>
 
-  <script src="../assets/vendor/wow/wow.min.js"></script>
+  <script src="./assets/vendor/wow/wow.min.js"></script>
 
-  <script src="../assets/vendor/animateNumber/jquery.animateNumber.min.js"></script>
+  <script src="./assets/vendor/animateNumber/jquery.animateNumber.min.js"></script>
 
-  <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="./assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   
-  <script src="../assets/js/google-maps.js"></script>
+  <script src="./assets/js/google-maps.js"></script>
   
-  <script src="../assets/js/minibar-virtual.js"></script>
+  <script src="./assets/js/minibar-virtual.js"></script>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
 
