--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <li>
                 <div class="title">Apr 2021</div>
                 <div class="details">
-                  <h5>Frontend Developer</h5>
+                  <h5>Senior Frontend Developer(Web3)</h5>
                   <small class="fg-theme">PORTION</small>
                   <p>Built NFT Marketplace of digital art on Portion Chain using ERC-721, ERC-1155
                     both for NFT, ERC-20 for governance token.</p>
