--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Max Stevens - Full-stack developer</title>
+  <title>Max Stevens - Senior Frontend developer</title>
   
   <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico">
   
@@ -37,41 +37,6 @@
   <!-- Back to top button -->
   <div class="btn-back_to_top">
     <span class="ti-arrow-up"></span>
-  </div>
-  
-  <!-- Setting button -->
-  <div class="config">
-    <div class="template-config">
-      <!-- Settings -->
-      <div class="d-block">
-        <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
-      </div>
-      <!-- Puschase -->
-      <div class="d-block">
-        <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
-      </div>
-      <!-- Help -->
-      <div class="d-block">
-        <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
-      </div>
-    </div>
-    <div class="set-menu">
-      <p>Select Color</p>
-      <div class="color-bar" data-toggle="selected">
-        <span class="color-item bg-theme-red selected" data-class="theme-red"></span>
-        <span class="color-item bg-theme-blue" data-class="theme-blue"></span>
-        <span class="color-item bg-theme-green" data-class="theme-green"></span>
-        <span class="color-item bg-theme-orange" data-class="theme-orange"></span>
-        <span class="color-item bg-theme-purple" data-class="theme-purple"></span>
-      </div>
-      <select class="custom-select d-block my-2" id="change-page">
-        <option value="">Choose Page</option>
-        <option value="index">Topbar</option>
-        <option value="blog-topbar">Blog (Topbar)</option>
-        <option value="index-2">Minibar</option>
-        <option value="blog-minibar">Blog (Minibar)</option>
-      </select>
-    </div>
   </div>
   
   <div class="topbar-nav fixed-top">
@@ -116,12 +81,6 @@
           </a>
         </li>
         <li class="menu-item">
-          <a href="#blog" class="menu-link">
-            <span class="icon ti-book"></span>
-            <span class="caption">Blog</span>
-          </a>
-        </li>
-        <li class="menu-item">
           <a href="#contact" class="menu-link">
             <span class="icon ti-location-pin"></span>
             <span class="caption">Contact</span>
@@ -136,7 +95,7 @@
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Welcome</h1>
         <h2 class="fw-medium fg-theme">I'm Max Stevens</h2>
-        <p class="tagline">Full-Stack Web & Blockchain Developer</p>
+        <p class="tagline">Senior Frontend Developer</p>
       </div>
     </div>
     
@@ -153,11 +112,10 @@
           <div class="col-md-6">
             <div class="caption wow fadeInRight">
               <h2 class="fg-dark">Max Stevens</h2>
-              <p class="fg-theme fw-medium">Full-Stack Web & Blockchain Developer</p>
-              <p>Dedicated and efficient full-stack developer with seven years of experience in the
+              <p class="fg-theme fw-medium">Frontend Web Developer</p>
+              <p>Dedicated and efficient frontend developer with seven years of experience in the
                 industry. Seeking to leverage high proficiency in Javascript/Typescript frameworks and
-                Saas platforms in a full-time career as a senior full-stack developer. Certified in both
-                F/E and B/E technologies.
+                Saas platforms in a full-time career as a senior frontend engineer.
                 </p>
               <ul class="theme-list">
                 <li class="fg-dark"><b>From:</b> Nagoya, Japan</li>
@@ -165,7 +123,7 @@
                 <li class="fg-dark"><b>Birth:</b> 07/10/1991</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
-              <button class="btn btn-theme btn-rounded">Download CV</button>
+              <a class="btn btn-theme btn-rounded" href="/MaxStevens-Senior Frontend Engineer.pdf">Download CV</a>
             </div>
           </div>
         </div>
@@ -174,7 +132,7 @@
       <div class="container mt-5">
         <h1 class="text-center fg-dark wow fadeInUp">My Skills</h1>
         <div class="row py-5">
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h4 class="wow fadeInUp">Front-end skills</h4>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">HTML/CSS</span>
@@ -191,7 +149,7 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">React</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
+                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -201,33 +159,18 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <h4 class="wow fadeInUp">Back-end skills</h4>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Node</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 88%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">88%</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Laravel</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
-              </div>
-            </div>
-            <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">PostgreSQL</span>
-              <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <h4 class="wow fadeInUp">Other Skills</h4>
+            <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Web3</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+              </div>
+            </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Solidity</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
+                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">60%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
@@ -261,15 +204,15 @@
               <li>
                 <div class="title">Current</div>
                 <div class="details">
-                  <h5>Senior Fullstack Engineer</h5>
+                  <h5>Senior Frontend Engineer</h5>
                   <small class="fg-theme">Self-Employed</small>
-                  <p>Freelance as an independant fullstack web & blockchain developer with various start-up clients.</p>
+                  <p>Freelance as an independant frontend web & blockchain developer with various start-up clients.</p>
                 </div>
               </li>
               <li>
                 <div class="title">Apr 2021</div>
                 <div class="details">
-                  <h5>Fullstack Blockchain Developer</h5>
+                  <h5>Senior Frontend Developer(Web3)</h5>
                   <small class="fg-theme">PORTION</small>
                   <p>Built NFT Marketplace of digital art on Portion Chain using ERC-721, ERC-1155
                     both for NFT, ERC-20 for governance token.</p>
@@ -280,7 +223,7 @@
               <li>
                 <div class="title">Sep 2019</div>
                 <div class="details">
-                  <h5>Senior Frontend Developer(Lead)</h5>
+                  <h5>Senior Frontend Lead Developer</h5>
                   <small class="fg-theme">WEBDEVIUM</small>
                   <p>Build a minting site generates random NFT arts with Web3.</p>
                   <p>Manage configuration of module bundler tools such as Webpack, parcel, etc</p>
@@ -292,13 +235,10 @@
               <li>
                 <div class="title">Jan 2018</div>
                 <div class="details">
-                  <h5>Fullstack Developer(Frontend Lead)</h5>
+                  <h5>Senior Frontend Developer</h5>
                   <small class="fg-theme">EASTSOURCE</small>
-                  <p>Developed full-stack applications across various platforms using latest industryadopted technologies and frameworks</p>
-                  <p>Gained hands-on expertise in Bootstrap, Foundation, Express and similar backend Node.js as well as front-end presentation frameworks web application
-                    frameworks</p>
-                  <p>Worked to solve complex problems using the latest in Cloud, Mobile, and Web
-                    Technologies.</p>
+                  <p>Experience various cloud services to integrate with front-end(React|Angular)</p>
+                  <p>Worked to solve complex problems using the latest in Cloud and Web Technologies.</p>
                 </div>
               </li>
               <li>
@@ -309,6 +249,7 @@
                   <p>Planned, developed, tested, deployed, and maintained web applications.</p>
                   <p>Managed front-end development in the company's Portfolio Analyst, Employee
                     Track, and Account Management systems.</p>
+                  <p>Experience with HTML/CSS, Angular2, Angular6 and React</p>
                 </div>
               </li>
             </ul>
@@ -362,8 +303,8 @@
               <div class="iconic">
                 <span class="ti-settings"></span>
               </div>
-              <h4 class="fg-theme">Stubborn Backend</h4>
-              <p>Build a Backend Architecture for a product from scratch & Friendly with Cloud services.</p>
+              <h4 class="fg-theme">Flow Devops</h4>
+              <p>Always follow devops with various platforms: Git, Azure and etc <br/> Ready for cloud services</p>
               <a href="#" class="btn btn-theme btn-rounded">Read More</a>
             </div>
           </div>
@@ -420,14 +361,12 @@
         <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
         <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
           <button class="btn btn-theme-outline selected" data-filter="*">All</button>
-          <button class="btn btn-theme-outline" data-filter=".apps">Full-stack</button>
-          <button class="btn btn-theme-outline" data-filter=".template">Front-end</button>
-          <button class="btn btn-theme-outline" data-filter=".ios">Back-end</button>
-          <button class="btn btn-theme-outline" data-filter=".ui-ux">Blockchain</button>
+          <button class="btn btn-theme-outline" data-filter=".frontend">Front-end</button>
+          <button class="btn btn-theme-outline" data-filter=".blockchain">Blockchain</button>
         </div>
 
         <div class="gridder my-3">
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://www.tsi-holdings.com/freshers" target="_blank">
                 <img src="../assets/img/work/cover5.jpg" alt="">
@@ -438,7 +377,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="http://www.makeabeeline.com/" target="_blank">
                 <img src="../assets/img/work/cover4.jpg" alt="">
@@ -449,7 +388,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://findmy.vitra.com/en-en/" target="_blank">
                 <img src="../assets/img/work/cover3.jpg" alt="">
@@ -460,7 +399,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://buttersand.com/" target="_blank">
                 <img src="../assets/img/work/cover6.jpg" alt="">
@@ -471,7 +410,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://itemherald.com/" target="_blank">
                 <img src="../assets/img/work/cover2.jpg" alt="">
@@ -482,7 +421,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://propertyclub.nyc/" target="_blank">
                 <img src="../assets/img/work/cover1.jpg" alt="">
@@ -493,7 +432,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://portal.veryableops.com/" target="_blank">
                 <img src="../assets/img/work/cover9.png" alt="">
@@ -504,7 +443,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://outlawsnft.io/" target="_blank">
                 <img src="../assets/img/work/cover8.png" alt="">
@@ -515,7 +454,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend blockchain wow zoomIn">
             <div class="img-place">
               <a href="https://www.ovo.space/" target="_blank">
                 <img src="../assets/img/work/cover7.png" alt="">
@@ -526,7 +465,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://travamigos.com/" target="_blank">
                 <img src="../assets/img/work/cover10.png" alt="">
@@ -537,7 +476,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place">
               <a href="https://aviapark.com/" target="_blank">
                 <img src="../assets/img/work/cover11.png" alt="">
@@ -548,7 +487,7 @@
               </a>
             </div>
           </div>
-          <div class="grid-item apps wow zoomIn">
+          <div class="grid-item apps frontend wow zoomIn">
             <div class="img-place" style="min-height: 240px; display: flex; align-items: center; justify-content: center;">
               <h2>Coming soon</h2>
             </div>
@@ -612,7 +551,7 @@
               <hr class="divider">
               <ul class="list-unstyled">
                 <li><a href="https://github.com/single-batman">Github</a></li>
-                <li><a href="#">Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/max-stevens-59162a24b/">Linkedin</a></li>
               </ul>
             </div>
           </div>
