--- a/index.html
+++ b/index.html
@@ -224,54 +224,17 @@
             <li>
               <div class="title">Current</div>
               <div class="details">
-                <h5>Senior Fullstack Engineer</h5>
+                <h5>Fullstack Developer</h5>
                 <small class="fg-theme">Self-Employed</small>
-                <p>Freelance as an independant fullstack web & blockchain developer with various start-up clients.</p>
+                <p>Freelance as an independant fullstack engineer with various start-up clients.</p>
               </div>
             </li>
             <li>
-              <div class="title">Apr 2021</div>
-              <div class="details">
-                <h5>Fullstack Blockchain Developer</h5>
-                <small class="fg-theme">PORTION</small>
-                <p>Built NFT Marketplace of digital art on Portion Chain using ERC-721, ERC-1155
-                  both for NFT, ERC-20 for governance token.</p>
-                <p>Developed whole smart contract of $PRT from scratch</p>
-                <p>Lead v1 and v2 of Portion front-end development with Web3 and React</p>
-              </div>
-            </li>
-            <li>
-              <div class="title">Sep 2019</div>
-              <div class="details">
-                <h5>Senior Frontend Developer(Lead)</h5>
-                <small class="fg-theme">WEBDEVIUM</small>
-                <p>Build a minting site generates random NFT arts with Web3.</p>
-                <p>Manage configuration of module bundler tools such as Webpack, parcel, etc</p>
-                <p>Manage CI/CD setup and configurations, Packaging the app for staging or
-                  production, Application versioning and release, Infrastructure configuration and
-                  management and Application performance monitoring</p>
-              </div>
-            </li>
-            <li>
-              <div class="title">Jan 2018</div>
-              <div class="details">
-                <h5>Fullstack Developer(Frontend Lead)</h5>
-                <small class="fg-theme">EASTSOURCE</small>
-                <p>Developed full-stack applications across various platforms using latest industryadopted technologies and frameworks</p>
-                <p>Gained hands-on expertise in Bootstrap, Foundation, Express and similar backend Node.js as well as front-end presentation frameworks web application
-                  frameworks</p>
-                <p>Worked to solve complex problems using the latest in Cloud, Mobile, and Web
-                  Technologies.</p>
-              </div>
-            </li>
-            <li>
-              <div class="title">Jul 2016</div>
+              <div class="title">Feb 2017</div>
               <div class="details">
                 <h5>Frontend Developer</h5>
-                <small class="fg-theme">FIXER</small>
-                <p>Planned, developed, tested, deployed, and maintained web applications.</p>
-                <p>Managed front-end development in the company's Portfolio Analyst, Employee
-                  Track, and Account Management systems.</p>
+                <small class="fg-theme">Euristiq</small>
+                <p>Worked as a front-end developer and mainly used React and sometimes experienced Vue. With my good eyes on design, I used to be give creative and great ideas to the team. I loved working with Euristiq team.</p>
               </div>
             </li>
           </ul>
@@ -284,18 +247,18 @@
           <h2 class="fg-dark px-md-4 timeline-title-right">Education</h2>
           <ul class="timeline mt-4">
             <li>
-              <div class="title">2013</div>
+              <div class="title">2010</div>
               <div class="details">
                 <h5>Art & Design</h5>
-                <small class="fg-theme">Hosei University</small>
+                <small class="fg-theme">Kharkiv State Academy of Design and Arts</small>
                 <p>Studied UI/UX design following Japanese traditional art scheme</p>
               </div>
             </li>
             <li>
-              <div class="title">2009</div>
+              <div class="title">2002</div>
               <div class="details">
                 <h5>B.S.Computer Science</h5>
-                <small class="fg-theme">University of North Carolina at Chapel Hill</small>
+                <small class="fg-theme">Ivan Franko National University of Lviv</small>
                 <p>Studied full-stack development from Python, Javascript and HTML/CSS</p>
               </div>
             </li>
