--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
           <ul class="theme-list">
             <li><b>From:</b> Kharkiv, UA</li>
-            <li><b>Lives In:</b> Kharkiv, US</li>
+            <li><b>Lives In:</b> Kharkiv, UA</li>
             <li><b>Gender:</b> Male</li>
           </ul>
           <button class="btn btn-theme-outline">Download CV</button>
