--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Andrey Bogush</h1>
           <h5 class="fg-theme mb-3">Web Developer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
+          <p class="text-muted">Andrey is a full-stack developer with a broad and versatile coding skill set. He quickly helps startups and enterprises with prototypes and ideas by efficiently building those things into reality. His expertise lies in building MVPs, apps, enterprise software, scalable microservices, web crawlers, REST and Socket APIs, infrastructure modeling, AWS, and deployments. Andrey is the go-to guy for any of your development needs.</p>
           <ul class="theme-list">
             <li><b>From:</b> Kharkiv, UA</li>
             <li><b>Lives In:</b> Kharkiv, UA</li>
             <li><b>Gender:</b> Male</li>
           </ul>
-          <button class="btn btn-theme-outline">Download CV</button>
         </div>
       </div>
     </div>
@@ -282,7 +281,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Multi-functional Scraper</h4>
-              <p>Will create a script scrapes any data you want from any website</p>
+              <p>Create scripts to scrape any data you want from any website</p>
             </div>
           </div>
         </div>
@@ -293,7 +292,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">UI/UX Design Advisor</h4>
-              <p>Will be active at giving my advice of UI/UX Design</p>
+              <p>Active at giving my advice on UI/UX Design</p>
             </div>
           </div>
         </div>
@@ -304,7 +303,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Frontend Development</h4>
-              <p>Will provide pixel-perfect UI development and sensitive review</p>
+              <p>Provide pixel-perfect UI development and sensitive reviews</p>
             </div>
           </div>
         </div>
@@ -315,7 +314,7 @@
             </div>
             <div class="caption">
               <h4 class="fg-theme">Backend Development</h4>
-              <p>Will create stubborn backend and design strong database scheme</p>
+              <p>Create a stubborn backend and design a strong database scheme</p>
             </div>
           </div>
         </div>
@@ -554,7 +553,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="caption">
-                    <div class="testi-content">Andrey is a great help managing a very out of date website. Everything we ask him to do is done quickly and efficiently, we would be lost without him.</div>
+                    <div class="testi-content">Andrey is a developer at heart, and a great one at that. His feedback is often direct but almost always results in some kind of experience or knowledge gain. He’s also a team player, meaning he has no problem accepting or hearing out different opinions/solutions, basically whatever gets the job done in the best possible way.</div>
                     <div class="testi-info">
                       <div class="thumb-profile">
                         <img src="./assets/img/testimonials/garland.jfif" alt="">
@@ -577,7 +576,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="caption">
-                    <div class="testi-content">Andrey is a great help managing a very out of date website. Everything we ask him to do is done quickly and efficiently, we would be lost without him.</div>
+                    <div class="testi-content">Andrey is a person very dedicated to the job. As an experienced developer with knowledge of various technologies, he is always there to lend a hand and offer guidance. As a manager on the other hand, he listens to suggestions from the team and understands developer woes.</div>
                     <div class="testi-info">
                       <div class="thumb-profile">
                         <img src="./assets/img/testimonials/kristal.jfif" alt="">
@@ -655,29 +654,10 @@
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
       <div class="row py-5">
-        <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
+        <div class="col-lg-12 px-0 pr-lg-3 wow zoomIn">
           <div class="vg-maps">
             <div id="google-maps" style="width: 100%; height: 100%;"></div>
           </div>
-        </div>
-        <div class="col-lg-5">
-          <form class="vg-contact-form">
-            <div class="form-row">
-              <div class="col-12 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Name" placeholder="Your Name">
-              </div>
-              <div class="col-6 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Email" placeholder="Email Address">
-              </div>
-              <div class="col-6 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Subject" placeholder="Subject">
-              </div>
-              <div class="col-12 mt-3 wow fadeInUp">
-                <textarea class="form-control" name="Message" rows="6" placeholder="Enter message here.."></textarea>
-              </div>
-              <button type="submit" class="btn btn-theme mt-3 wow fadeInUp ml-1">Send Message</button>
-            </div>
-          </form>
         </div>
       </div>
     </div>
