--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
       <div class="row py-5">
-        <div class="col-lg-12 px-0 pr-lg-3 wow zoomIn">
+        <div class="col-lg-12 px-0 wow zoomIn">
           <div class="vg-maps">
             <div id="google-maps" style="width: 100%; height: 100%;"></div>
           </div>
