--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
           <div class="footer-info">
             <p>Where to find me</p>
             <hr class="divider">
-            <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>
+            <p class="fs-large fg-white"> av.Heroev Kharkova 131g, Kharkiv 61001 Ukraine</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 py-3">
