--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
+              <span class="caption">Ruby on Rails</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">85%</div>
+              </div>
+            </div>
+            <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Shopify</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
