--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Andrey Bogush</title>
+  <title>Andrey Bohush</title>
+
+  <meta name="author" content="Andrey Bohush">
+  <meta name="language" content="english">
+  <meta name="distribution" content="global">
+  <meta name="description" content="Dedicated and efficient full-stack developer with seven years of experience in the industry. Seeking to leverage high proficiency in Javascript/Typescript frameworks and Saas platforms in a full-time career as a senior full-stack developer. Certified in both F/E and B/E technologies.">
+  <meta name="twitter:widgets:csp" content="on">
+  <meta name="keywords" content="Andrey Bohush, Full-stack developer, Web developer, Front-end developer, Back-end developer, Senior Developer, graphic design, web design, website design, website builder, web designer, webdesign, ecommerce website, web design company, website creator, website designer, responsive web design, web development company, best website design, web design software, web page design, build a website, web developer salary, design website, web design courses, how to design a website, web design inspiration, website layout, web designer salary, web application development">
+  <meta name="robots" content="index, follow">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://andrey-bogush.github.io/assets/img/person.jpg">
+  <meta property="og:image" content="https://andrey-bogush.github.io/assets/img/person.jpg">
+  <meta property="og:site_name" content="Andrey Bohush">
+  <meta property="og:title" content="Andrey Bohush">
+  <meta name="google-site-verification" content="qFYMOwOlEoLxRoHcH_fdAMc7dkMY4UJG3Ew6-heyGJE" />
 
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
   
@@ -76,7 +90,7 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
-      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Andrey</b> Bogush</h1>
+      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Andrey</b> Bohush</h1>
       <div class="badge">Web Developer</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
@@ -91,7 +105,7 @@
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
-          <h1 class="fw-light">Andrey Bogush</h1>
+          <h1 class="fw-light">Andrey Bohush</h1>
           <h5 class="fg-theme mb-3">Web Developer</h5>
           <p class="text-muted">Andrey is a full-stack developer with a broad and versatile coding skill set. He quickly helps startups and enterprises with prototypes and ideas by efficiently building those things into reality. His expertise lies in building MVPs, apps, enterprise software, scalable microservices, web crawlers, REST and Socket APIs, infrastructure modeling, AWS, and deployments. Andrey is the go-to guy for any of your development needs.</p>
           <ul class="theme-list">
@@ -671,7 +685,7 @@
   
   <!-- Footer -->
   <div class="vg-footer">
-    <h1 class="text-center">Andrey Bogush</h1>
+    <h1 class="text-center">Andrey Bohush</h1>
     <div class="container">
       <div class="row">
         <div class="col-lg-4 py-3">
@@ -686,7 +700,7 @@
             <p>Follow me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li><a href="https://github.com/andrey-bogush">Github</a></li>
+              <li><a href="https://github.com/andrey-Bohush">Github</a></li>
               <li><a href="https://www.linkedin.com/in/andrey-bohush-4767a224a/">Linkedin</a></li>
             </ul>
           </div>
@@ -696,7 +710,7 @@
             <p>Contact me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li>andreybogush202@gmail.com</li>
+              <li>andreyBohush202@gmail.com</li>
             </ul>
           </div>
         </div>
