--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <button class="btn btn-theme-outline" data-filter=".web3">Web3</button>
       </div>
 
-      <div class="gridder my-3 wow zoomIn">
+      <div class="gridder my-3">
         <div class="grid-item frontend backend">
           <div class="img-place">
             <a href="http://www.makeabeeline.com/" target="_blank">
