--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </div>
 
       <div class="gridder my-3">
-        <div class="grid-item frontend backend">
+        <div class="grid-item frontend backend wow zoomIn">
           <div class="img-place">
             <a href="http://www.makeabeeline.com/" target="_blank">
               <img src="./assets/img/work/cover4.jpg" alt="">
@@ -392,7 +392,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend backend">
+        <div class="grid-item frontend backend wow zoomIn">
           <div class="img-place">
             <a href="https://findmy.vitra.com/en-en/" target="_blank">
               <img src="./assets/img/work/cover3.jpg" alt="">
@@ -403,7 +403,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend backend">
+        <div class="grid-item frontend backend wow zoomIn">
           <div class="img-place">
             <a href="https://buttersand.com/" target="_blank">
               <img src="./assets/img/work/cover6.jpg" alt="">
@@ -414,7 +414,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend backend">
+        <div class="grid-item frontend backend wow zoomIn">
           <div class="img-place">
             <a href="https://itemherald.com/" target="_blank">
               <img src="./assets/img/work/cover2.jpg" alt="">
@@ -425,7 +425,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend web3">
+        <div class="grid-item frontend web3 wow zoomIn">
           <div class="img-place">
             <a href="https://propertyclub.nyc/" target="_blank">
               <img src="./assets/img/work/cover1.jpg" alt="">
@@ -436,7 +436,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend">
+        <div class="grid-item frontend wow zoomIn">
           <div class="img-place">
             <a href="https://portal.veryableops.com/" target="_blank">
               <img src="./assets/img/work/cover9.png" alt="">
@@ -447,7 +447,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend web3">
+        <div class="grid-item frontend web3 wow zoomIn">
           <div class="img-place">
             <a href="https://outlawsnft.io/" target="_blank">
               <img src="./assets/img/work/cover8.png" alt="">
@@ -458,7 +458,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend web3">
+        <div class="grid-item frontend web3 wow zoomIn">
           <div class="img-place">
             <a href="https://www.ovo.space/" target="_blank">
               <img src="./assets/img/work/cover7.png" alt="">
@@ -469,7 +469,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend backend">
+        <div class="grid-item frontend backend wow zoomIn">
           <div class="img-place">
             <a href="https://travamigos.com/" target="_blank">
               <img src="./assets/img/work/cover10.png" alt="">
@@ -480,7 +480,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item frontend">
+        <div class="grid-item frontend wow zoomIn">
           <div class="img-place">
             <a href="https://aviapark.com/" target="_blank">
               <img src="./assets/img/work/cover11.png" alt="">
@@ -491,7 +491,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item shopify">
+        <div class="grid-item shopify wow zoomIn">
           <div class="img-place">
             <a href="https://mogo1.myshopify.com/" target="_blank">
               <img src="./assets/img/work/cover5.jpg" alt="">
@@ -502,7 +502,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item shopify">
+        <div class="grid-item shopify wow zoomIn">
           <div class="img-place">
             <a href="https://calgee.com/" target="_blank">
               <img src="./assets/img/work/cover12.png" alt="">
@@ -513,7 +513,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item shopify">
+        <div class="grid-item shopify wow zoomIn">
           <div class="img-place">
             <a href="http://wildwoodbakery.com.au/" target="_blank">
               <img src="./assets/img/work/cover13.png" alt="">
@@ -524,7 +524,7 @@
             </a>
           </div>
         </div>
-        <div class="grid-item apps">
+        <div class="grid-item apps wow zoomIn">
           <div class="img-place" style="min-height: 240px; display: flex; align-items: center; justify-content: center;">
             <h2>Coming soon</h2>
           </div>
