--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div
 			class="vg-page page-home"
 			id="home"
-			style="background-image: url(./assets/img/bg_image_1.jpg)"
+			style="background-image: url(./assets/img/bg_image_1.jpg); background-repeat: no-repeat; background-size: cover;"
 		>
 			<!-- Navbar -->
 			<div
@@ -379,21 +379,6 @@
 									</div>
 								</div>
 							</div>
-							<div class="progress-wrapper wow fadeInUp">
-								<span class="caption">Shopify</span>
-								<div class="progress">
-									<div
-										class="progress-bar"
-										role="progressbar"
-										style="width: 90%"
-										aria-valuenow="75"
-										aria-valuemin="0"
-										aria-valuemax="100"
-									>
-										90%
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 					<div class="col-md-6">
@@ -651,21 +636,17 @@
 		>
 			<div class="container">
 				<div class="row section-counter">
-					<div class="col-md-6 col-lg-3 py-4 wow fadeIn">
+					<div class="col-md-6 col-lg-4 py-4 wow fadeIn">
 						<h1 class="number" data-number="168">168</h1>
 						<span>Clients</span>
 					</div>
-					<div class="col-md-6 col-lg-3 py-4 wow fadeIn">
+					<div class="col-md-6 col-lg-4 py-4 wow fadeIn">
 						<h1 class="number" data-number="230">230</h1>
 						<span>Project Compleate</span>
 					</div>
-					<div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-						<h1 class="number" data-number="3">3</h1>
-						<span>Project Ongoing</span>
-					</div>
-					<div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-						<h1 class="number" data-number="399">399</h1>
-						<span>Client Satisfaction</span>
+					<div class="col-md-6 col-lg-4 py-4 wow fadeIn">
+						<h1 class="number" data-number="399">3296</h1>
+						<span>Coffees</span>
 					</div>
 				</div>
 			</div>
@@ -699,12 +680,6 @@
 						data-filter=".backend"
 					>
 						Backend
-					</button>
-					<button
-						class="btn btn-theme-outline"
-						data-filter=".shopify"
-					>
-						Shopify
 					</button>
 					<button class="btn btn-theme-outline" data-filter=".web3">
 						Web3
@@ -882,20 +857,6 @@
 							</a>
 						</div>
 					</div>
-					<div class="grid-item frontend web3 wow zoomIn">
-						<div class="img-place">
-							<a href="https://www.ovo.space/" target="_blank">
-								<img
-									src="./assets/img/work/cover7.png"
-									alt=""
-								/>
-								<div class="img-caption">
-									<h5 class="fg-theme">OVO Space</h5>
-									<p>NFT Marketplace</p>
-								</div>
-							</a>
-						</div>
-					</div>
 					<div class="grid-item frontend backend wow zoomIn">
 						<div class="img-place">
 							<a href="https://travamigos.com/" target="_blank">
@@ -987,20 +948,6 @@
 								<div class="img-caption">
 									<h5 class="fg-theme">Midone</h5>
 									<p>Vue Theme Template</p>
-								</div>
-							</a>
-						</div>
-					</div>
-                    <div class="grid-item frontend backend wow zoomIn">
-						<div class="img-place">
-							<a href="https://buttersand.com/" target="_blank">
-								<img
-									src="./assets/img/work/cover6.jpg"
-									alt=""
-								/>
-								<div class="img-caption">
-									<h5 class="fg-theme">PRESS BUTTER SAND</h5>
-									<p>Online Store</p>
 								</div>
 							</a>
 						</div>
